--- a/project/frontend/static/css/style.css
+++ b/project/frontend/static/css/style.css
@@ -25,6 +25,8 @@
     text-align: center;
     vertical-align: middle;
     line-height: 175px;
+    border-radius: 10px;
+    padding: 5px;
 }
 
 .switch {
@@ -66,11 +68,11 @@
 }
 
 input:checked+.slider {
-    background-color: #fff;
+    background-color: #2196F3;
 }
 
 input:focus+.slider {
-    box-shadow: 0 0 2px #b5bcc7;
+    box-shadow: 0 0 2px #2196F3;
 }
 
 input:checked+.slider:before {
@@ -93,4 +95,40 @@ input:checked+.slider:before {
 input[type="file"] {
     border: 3px solid #b5bcc7;
     direction: rtl;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+#message_box {
+    width: 100%;
+    height: 100px;
+    border: 3px solid #b5bcc7;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+#input_date {
+    border: 3px solid #b5bcc7;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+#submit {
+    margin-left: 85%;
+    border: 3px solid #b5bcc7;
+    background-color: white;
+    border: 3px solid #b5bcc7;
+    border-radius: 10px;
+    padding: 5px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+#calendar_icon {
+    position: absolute;
+    top: 52.65%;
+    left: 23%;
+    margin-left: 20px;
+    font-size: 36px;
+    color: #b5bcc7
 }
