--- a/project/frontend/static/css/style.css
+++ b/project/frontend/static/css/style.css
@@ -107,10 +107,12 @@ input[type="file"] {
     padding: 5px;
 }
 
-#input_date {
+#filename {
     border: 3px solid #b5bcc7;
     border-radius: 10px;
     padding: 5px;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 #submit {
@@ -126,9 +128,16 @@ input[type="file"] {
 
 #calendar_icon {
     position: absolute;
-    top: 52.65%;
+    top: 54%;
     left: 23%;
     margin-left: 20px;
     font-size: 36px;
     color: #b5bcc7
+}
+
+#fakeBrowse {
+    background-color: #fff;
+    border: 3px solid #b5bcc7;
+    border-radius: 10px;
+    padding: 5px;
 }
