--- a/project/frontend/static/css/style.css
+++ b/project/frontend/static/css/style.css
@@ -107,7 +107,8 @@ input[type="file"] {
     padding: 5px;
 }
 
-#filename {
+#filename,
+#filename2 {
     border: 3px solid #b5bcc7;
     border-radius: 10px;
     padding: 5px;
@@ -128,15 +129,22 @@ input[type="file"] {
 
 #calendar_icon {
     position: absolute;
-    top: 54%;
-    left: 23%;
+    top: 68%;
+    left: 31%;
     margin-left: 20px;
     font-size: 36px;
     color: #b5bcc7
 }
 
-#fakeBrowse {
+#fakeBrowse,
+#fakeBrowse2 {
     background-color: #fff;
+    border: 3px solid #b5bcc7;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+#input_date {
     border: 3px solid #b5bcc7;
     border-radius: 10px;
     padding: 5px;
